Changes to bibliography

--- a/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
+++ b/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
@@ -7,23 +7,12 @@
 
 \usepackage{microtype}
 
-\usepackage{hyperref}
-\hypersetup{
-bookmarks,
-bookmarksdepth=3,
-bookmarksopen,
-bookmarksnumbered,
-pdfstartview=FitH,
-colorlinks,backref,hyperindex,
-linkcolor=Sepia,
-anchorcolor=BurntOrange,
-citecolor=MidnightBlue,
-citecolor=OliveGreen,
-filecolor=BlueViolet,
-menucolor=Yellow,
-urlcolor=OliveGreen
-}
-\usepackage{xspace}
+\usepackage{hyperref} \hypersetup{ bookmarks, bookmarksdepth=3,
+   bookmarksopen, bookmarksnumbered, pdfstartview=FitH,
+   colorlinks,backref,hyperindex, linkcolor=Sepia,
+   anchorcolor=BurntOrange, citecolor=MidnightBlue,
+   citecolor=OliveGreen, filecolor=BlueViolet, menucolor=Yellow,
+   urlcolor=OliveGreen } \usepackage{xspace}
 \interfootnotelinepenalty=100000
 
 \usepackage{mabliautoref}
