--- a/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
+++ b/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
@@ -55,6 +55,11 @@
 \newcommand{\idealm}{\mathfrak{m}}
 \DeclareMathOperator{\fpt}{fpt}
 
+\renewcommand{\geq}{\geqslant}
+\renewcommand{\leq}{\leqslant}
+\renewcommand{\ge}{\geqslant}
+\renewcommand{\le}{\leqslant}
+
 %%%%%%%%%%%%%%%%%% To-Do %%%%%%%%%%%%%%%%%%
 \usepackage[textwidth=3.3 cm,textsize=small,shadow
 %disable
@@ -285,7 +290,7 @@ i13 : time nu(2, m, m^2) -- uses binary search (default)
 
 o13 = 97
 
-i14 : time nu(2, m, m^2, Search => Linear) -- but linear seach gets luckier
+i14 : time nu(2, m, m^2, Search => Linear) -- but linear search gets luckier
      -- used 0.597035 seconds
 
 o14 = 97
@@ -534,7 +539,6 @@ o8 = true
 \smallskip
 
 If \texttt{UseSpecialAlgorithms} is set to \texttt{true} and $f$ does not fall into any of the aforementioned cases, then the function \texttt{fpt} next calls \texttt{isSimpleNormalCrossing(f)} (see Section~\ref{subsec.SNC}) to check whether the polynomial $f$ is (locally, at the origin) a product of factors that are in simple normal crossing, in which case the $F$-pure threshold is simply the reciprocal of the largest multiplicity occurring in that factorization.  
-% If \texttt{isSimpleNormalCrossing(f)} outputs true, then the $F$-pure threshold is easily computed, since is just the minimum of the values $1/a_i$, for $1 \leq i \leq n$.
 Note that the function \texttt{factor} is called whenever \texttt{isSimpleNormalCrossing} is used, and that can sometimes make the verification slow.  The user can avoid this by setting \texttt{UseSpecialAlgorithms} to \texttt{false}.
 
 \subsection{When no special algorithm applies}
@@ -545,7 +549,7 @@ The value of the option \texttt{DepthOfSearch} determines the precision of the i
 
 More specifically, let $e$ denote the value of the option \texttt{DepthOfSearch}, which conservatively defaults to \texttt{1}.
 The \texttt{fpt} function first computes $\nu=\nu_f(p^e)$, which agrees with the output of \texttt{nu(e,f)}.
-It is well known that the $F$-pure threshold of $f$ is greater than $\nu/p^e$ and at most $(\nu+1)/p^e$, and applying  \cite[Proposition 4.2]{HernandezFPurityOfHypersurfaces} to the lower bound tells us that the $F$-pure threshold of $f$ must be at least $\nu/(p^e-1)$.
+It is well known that the $F$-pure threshold of $f$ is greater than $\nu/p^e$ and at most $(\nu+1)/p^e$, and applying  \cite[Proposition~4.2]{HernandezFPurityOfHypersurfaces} to the lower bound tells us that the $F$-pure threshold of $f$ must be at least $\nu/(p^e-1)$.
 In summary, we know that the $F$-pure threshold of $f$ must lie in the closed interval
 %
 \begin{equation}
@@ -826,7 +830,7 @@ o33 : QQ
 \smallskip
 
 \noindent In this case, most features enabled by \texttt{UseSpecialAlgorithms => true}
-are ignored, except for the check for simple normal crossings;  \texttt{FinalCheck => true}
+are ignored, except for the check for simple normal crossings;  \texttt{FinalAttempt => true}
 is also ignored.
 
 \subsection{The function \texttt{isSimpleNormalCrossings}} \label{subsec.SNC}
