Updated links to our packages to be permalinks

--- a/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
+++ b/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
@@ -94,12 +94,13 @@ In any case, we now thank all \emph{TestIdeals} authors in the Acknowledgments.
 \item 
 \item Though we don't particularly like it either, this is standard notation, initiated in [BMS08].
 \item 
-\item 
+\item We changed the wording to reflect the fact that it is remarkable that the terms of the sequence can be recovered by its limit 
 \item We updated this based on the referee's suggestion. 
 \item
 \item
 \item
-\item 
+\item We've put permalinks to the cited versions (the current ones) of our packages  \emph{FrobeniusThresholds} and \emph{TestIdeals}. 
+However, we will need to consult with the editors about how to deal with citing other packages.  
 \item We investigated what is going on here, and it appears that the way to avoid the error is to first install the most recent version of the \emph{TestIdeals} package from GitHub first, and then install the current version of \emph{FrobeniusThresholds}. 
 This issue will not exist after the next version of \emph{Macaulay2} is released.
 
