--- a/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
+++ b/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
@@ -123,7 +123,7 @@
 
 \section{Introduction}
 
-This paper describes the \emph{Macaulay2} package \emph{FrobeniusThresholds} \cite{M2, FThresholdsPackage}, which provides tools for computing or estimating certain fundamental invariants in positive characteristic commutative algebra, namely \emph{$F$-pure thresholds}, \emph{$F$-thresholds}, and \emph{$F$-jumping exponents}.
+This paper describes the \emph{Macaulay2} package \emph{FrobeniusThresholds}\footnote{This package was previously named \emph{FThresholds}} \cite{M2, FThresholdsPackage}, which provides tools for computing or estimating certain fundamental invariants in positive characteristic commutative algebra, namely \emph{$F$-pure thresholds}, \emph{$F$-thresholds}, and \emph{$F$-jumping exponents}.
 Recall that a ring of prime characteristic $p>0$ is \emph{$F$-pure} if the Frobenius map|that is, the ring endomorphism sending an element to its $p$-th power|is a pure morphism;  under natural geometric hypotheses, this is equivalent to the condition that the Frobenius morphism splits as a map of rings.
 The concept of $F$-purity has proven to be important in commutative algebra, and has a rich history.
 Indeed, it first appeared in the work of Hochster and Roberts to study local cohomology \cite{HochsterRobertsFrobeniusLocalCohomology}, was compared with rational singularities in  \cite{FedderFPureRat}, and was used to study global properties of Schubert varieties in \cite{MehtaRamanathanFrobeniusSplittingAndCohomologyVanishing}.
@@ -177,7 +177,9 @@ However, in this note we adopt the former notation to avoid any possible confusi
 % However, in this note we adopt the former notation to avoid any possible confusion with the function \texttt{fpt} described in Section~\ref{sec.FPT}.
 % Indeed, the command \texttt{fpt(f)} need not always output the number $\ft^{\idealm}(f) = \fpt(f)$, though in the case that it cannot, it will provide a reasonably good estimate for this number.
 
-It turns out that the sequence $\big(\nu_f^{\idealm}(p^e) \big)_{e=0}^{\infty}$ itself, and not just its limit, encodes interesting information about $f$.  For example, it is closely related to the \emph{Bernstein--Sato polynomial} of $f$ \cite{MustataTakagiWatanabeFThresholdsAndBernsteinSato}.  Thus, it is natural to ask whether one can recover the sequence $\big( \nu_f^{\idealm}(p^e) \big)_{e=0}^{\infty}$ from the limit $\ft^{\idealm}(f)$.  Fortunately, the answer to this question is yes \cite{MustataTakagiWatanabeFThresholdsAndBernsteinSato, HernandezFPurityOfHypersurfaces}; for each $e$ we have
+It turns out that the sequence $\big(\nu_f^{\idealm}(p^e) \big)_{e=0}^{\infty}$ itself, and not just its limit, encodes interesting information about $f$.  For example, it is closely related to the \emph{Bernstein--Sato polynomial} of $f$ \cite{MustataTakagiWatanabeFThresholdsAndBernsteinSato}.  
+Remarkably, 
+one can recover the sequence $\big( \nu_f^{\idealm}(p^e) \big)_{e=0}^{\infty}$ from the limit $\ft^{\idealm}(f)$ \cite{MustataTakagiWatanabeFThresholdsAndBernsteinSato, HernandezFPurityOfHypersurfaces}: For each $e$, we have
 \begin{equation*}
 \nu_f^{\idealm}(p^e) = \lceil p^e \cdot \ft^{\idealm}(f) \rceil - 1.
 \end{equation*}
@@ -195,7 +197,7 @@ the \emph{$F$-threshold of $I$ with respect to $J$}.
 The value $\ft^{\idealm}(I)$ is called the \emph{$F$-pure threshold of $I$} at the origin, and if $I = \langle f \rangle$ is principal,  $\ft^{J}(f) \coloneqq  \ft^J(I)$ is called the \emph{$F$-threshold of $f$ with respect to $J$}.
 Like $F$-pure thresholds, $F$-thresholds are rational (when finite), and can be characterized in terms of test ideals.
 
-\subsection*{Acknowledgements.}  The authors enthusiastically thank everyone who helped complete the \emph{FrobeniusThresholds} package: the package coauthors Juliette Bruce and Daniel Smolkin, and contributors  Erin Bela, Zhibek Kadyrsizova, Moty Katzman, Sara Malec, and Marcus Robinson.
+\subsection*{Acknowledgements.}  The authors enthusiastically thank everyone who helped complete the \emph{FrobeniusThresholds} package: the package coauthors Juliette Bruce and Daniel Smolkin, and contributors  Erin Bela, Zhibek Kadyrsizova, Moty Katzman, Sara Malec, and Marcus Robinson.  We also thank the authors of the \emph{TestIdeals} package, which, beyond the authors of the present paper and those listed above, are Alberto Boix, Drew Ellingson, Matthew Mastroeni, and Maral Mostafazadehfard.
 
 Thanks go to the organizers of the \emph{Macaulay2} workshops where much of the functionality described herein was developed, hosted by Wake Forest University in 2012, the University of California, Berkeley in 2014 and 2017, Boise State University in 2015, and the University of Utah in 2016.
 
@@ -205,7 +207,7 @@ The current version of the package was finalized during these events.
 \section{The {\tt nu} function}
 \label{sec.Nu}
 
-We first consider the \texttt{nu} function, a fundamental component of the package \emph{FrobeniusThresholds}.
+We first describe the \texttt{nu} function, a fundamental component of the package \emph{FrobeniusThresholds}.
 We adopt the setup established in the introduction: we work in a polynomial ring $R$ over a finite field of characteristic $p>0$,  $\idealm$ denotes the ideal generated by the variables, and $e$ is a natural number.
 If $I$ and $J$ are ideals of $R$, the command \texttt{nu(e,I,J)} outputs the extended integer $\nu_I^J(p^e)$ defined in the introduction; if $f$ is an element of $R$, \texttt{nu(e,f,J)} outputs $\nu_f^J(p^e) \coloneqq \nu_{\langle f \rangle}^J(p^e)$.
 When the third argument is omitted from the function \texttt{nu}, it is assumed to be the maximal ideal $\idealm$.
