--- a/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
+++ b/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
@@ -885,7 +885,7 @@ o40 = false
 One natural direction of development would be to  incorporate the test ideals $\tau(I^t)$ when computing $F$-thresholds in the case where the ideal $I$ is nonprincipal.
 The theoretical foundation for computing such test ideals has already largely been worked out in \cite{SchwedeTuckerTestIdealsOfNonPrincipal}, but such an update to the \emph{FrobeniusThresholds} package would require the  \emph{TestIdeals} package to be updated first.
 
-At the moment, the specialized algorithm called by the \texttt{fpt} function for computing the $F$-pure threshold of a homogeneous polynomial in two variables limits us to working with the standard grading on the ambient polynomial ring.  Clearly, it is desirable to be able to work with nonstandard gradings as well, and results of \cite{HernandezTeixeiraFThresholdFunctions} suggest an algorithm for doing so.  Thus, the package could be improved by finalizing and implementing such an algorithm.
+At the moment, the specialized algorithm called by the \texttt{fpt} function for computing the $F$-pure threshold of a homogeneous polynomial in two variables limits us to working with the standard grading on the ambient polynomial ring.  It is desirable to be able to work with nonstandard gradings as well, and results of \cite{HernandezTeixeiraFThresholdFunctions} suggest an algorithm for doing so.  Thus, the package could be improved by finalizing and implementing such an algorithm.
 
 Finally, it would be desirable to develop and implement additional algorithms for computing $F$-pure thresholds and $F$-jumping numbers for additional classes of polynomials.  The first, third, and fourth authors, along with Josep \'Alvarez Montaner, Jack Jeffries, and Luis N\'u\~nez-Betancourt,  are currently working on developing such algorithms.  The theoretical foundation of these algorithms lies in polyhedral geometry and integer programming, making them natural candidates for  implementation in \emph{Macaulay2}.  
 
