--- a/Fsing/FrobeniusThresholdsPaper/MainBib.bib
+++ b/Fsing/FrobeniusThresholdsPaper/MainBib.bib
@@ -56,8 +56,12 @@
 @unpublished{TestIdealsPaper,
   author = {Boix, A. F. AND Hern\'andez, D. J. AND Kadyrsizova, Z. AND Katzman, M. AND Malec, S. AND Mastroeni, M. AND Mostafazadeh\-fard, M. AND Robinson, M. AND Schwede, K. AND Smolkin, D. AND Teixeira, P. AND Witt, E. E.},
   title = {{The \emph{TestIdeals} package for \emph{Macaulay2}}},
-  note = {preprint, \href{https://arxiv.org/abs/1810.02770}{arXiv:1810.02770 [math.AC]}},
-  year = {2018}
+ JOURNAL = {J. Softw. Algebra Geom.},
+  FJOURNAL = {Journal of Software for Algebra and Geometry},
+    VOLUME = {9},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {89--110},
 }
 
 
