Updated response to referee

--- a/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
+++ b/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
@@ -91,7 +91,7 @@
 Though the package \emph{FrobeniusThresholds} broke off from the \emph{TestIdeals} package, not all authors of the \emph{TestIdeals} package contributed to \emph{FrobeniusThresholds}.
 Unfortunately, the current \emph{Macaulay2} site for \emph{FThresholds} is outdated, and simply has the list of all \emph{TestIdeals} authors; this will be updated soon. 
 In any case, we now thank all \emph{TestIdeals} authors in the Acknowledgments. 
-\item 
+\item We do think that this paragraph is important, since $F$-thresholds and $F$-pure thresholds are the focus of the package, and they are constructed in this way.  We've added another example of the Hilbert-Kunz multiplicity to better show that this type of construction indeed fits into a broader context. 
 \item Though we don't particularly like it either, this is standard notation, initiated in [BMS08].
 \item 
 \item We changed the wording to reflect the fact that it is remarkable that the terms of the sequence can be recovered by its limit 
