Updated response to referee

--- a/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
+++ b/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
@@ -96,7 +96,7 @@ In any case, we now thank all \emph{TestIdeals} authors in the Acknowledgments.
 \item 
 \item We changed the wording to reflect the fact that it is remarkable that the terms of the sequence can be recovered by its limit 
 \item We updated this based on the referee's suggestion. 
-\item
+\item We moved this before Subsection 2.1.  We also reorganized 2.1 to highlight options that might be more relevant to the user. 
 \item
 \item
 \item We've put permalinks to the cited versions (the current ones) of our packages  \emph{FrobeniusThresholds} and \emph{TestIdeals}. 
