Updated Response to Referee

--- a/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
+++ b/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
@@ -93,7 +93,7 @@ Unfortunately, the current \emph{Macaulay2} site for \emph{FThresholds} is outda
 In any case, we now thank all \emph{TestIdeals} authors in the Acknowledgments. 
 \item We do think that this paragraph is important, since $F$-thresholds and $F$-pure thresholds are the focus of the package, and they are constructed in this way.  We've added another example of the Hilbert-Kunz multiplicity to better show that this type of construction indeed fits into a broader context. 
 \item Though we don't particularly like it either, this is standard notation, initiated in [BMS08].
-\item 
+\item We have added a brief explanation about why these limits exist. 
 \item We changed the wording to reflect the fact that it is remarkable that the terms of the sequence can be recovered by its limit 
 \item We updated this based on the referee's suggestion. 
 \item We moved this before Subsection 2.1.  We also reorganized 2.1 to highlight options that might be more relevant to the user. 
