--- a/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
+++ b/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
@@ -446,6 +446,12 @@ o4 = false
 }
 \smallskip
 
+\noindent \textcolor{red}{Alternative to the next two paragraphs:}
+
+\textcolor{blue}{Within the \emph{TestIdeals} package, the functions \texttt{testIdeal} and \texttt{FPureModule} are used to compute the test ideals of $f$ at different parameters.
+By comparing test ideals of $f$ at different parameters, we can decide  whether $t$ is the $F$-pure threshold of $f$. 
+Since not only the $F$-pure thresholds, but also the higher $F$-jumping numbers, are determined by containment conditions on test ideals, the functionality is extended to determine whether a given number is an $F$-jumping number.}
+
 The general method applied calls upon functionality from the \emph{TestIdeals} package.
 The functions \texttt{testIdeal} and \texttt{FPureModule} therein are used to compute the test ideals $\tau(f^t)$ and $\tau(f^{t-\varepsilon})$, for $0<\varepsilon\ll 1$.
 By comparing these test ideals, we can decide whether $t$ is the $F$-pure threshold of $f$.
@@ -901,7 +907,8 @@ o40 = false
 One natural direction of development would be to  incorporate the test ideals $\tau(I^t)$ when computing $F$-thresholds in the case where the ideal $I$ is nonprincipal.
 The theoretical foundation for computing such test ideals has already largely been worked out in \cite{SchwedeTuckerTestIdealsOfNonPrincipal}, but such an update to the \emph{FrobeniusThresholds} package would require the  \emph{TestIdeals} package to be updated first.
 
-At the moment, the specialized algorithm called by the \texttt{fpt} function for computing the $F$-pure threshold of a homogeneous polynomial in two variables limits us to working with the standard grading on the ambient polynomial ring.  It is desirable to be able to work with nonstandard gradings as well, and results of \cite{HernandezTeixeiraFThresholdFunctions} suggest an algorithm for doing so.  Thus, the package could be improved by finalizing and implementing such an algorithm.
+At the moment, the specialized algorithm called by the \texttt{fpt} function for computing the $F$-pure threshold of a homogeneous polynomial in two variables limits us to working with the standard grading on the ambient polynomial ring.  It is desirable to be able to work with nonstandard gradings as well, and results of \cite{HernandezTeixeiraFThresholdFunctions} suggest an algorithm for doing so.  For instance, the polynomial $f = x^6+x^2 y^2 + y^3$ is homogeneous under the grading $\deg x = 1, \deg y = 2$, and it is shown that the $F$-threshold of $f$ with respect to the ideal $\langle x, y^2 \rangle$ can be computed as the $F$-pure threshold of $x^3 + x^2 y + y^2$, which is homogeneous under the standard grading.
+The package could be improved by finalizing and implementing such an algorithm in greater generality.
 
 Finally, it would be desirable to develop and implement additional algorithms for computing $F$-pure thresholds and $F$-jumping numbers for additional classes of polynomials.  The first, third, and fourth authors, along with Josep \'Alvarez Montaner, Jack Jeffries, and Luis N\'u\~nez-Betancourt,  are currently working on developing such algorithms.  The theoretical foundation of these algorithms lies in polyhedral geometry and integer programming, making them natural candidates for  implementation in \emph{Macaulay2}.  
 
