--- a/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
+++ b/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
@@ -97,8 +97,8 @@ In any case, we now thank all \emph{TestIdeals} authors in the Acknowledgments.
 \item We changed the wording to reflect the fact that it is remarkable that the terms of the sequence can be recovered by its limit 
 \item We updated this based on the referee's suggestion. 
 \item We moved this before Subsection 2.1.  We also reorganized 2.1 to highlight options that might be more relevant to the user. 
-\item
-\item
+\item Since this computation generally sits in the \emph{TestIdeals} package, we thought it better to avoid the  $\epsilon$ notation and technical description of how these functions are used. 
+\item ``Clearly'' is removed, and an example is added to motivate this remark. 
 \item We've put permalinks to the cited versions (the current ones) of our packages  \emph{FrobeniusThresholds} and \emph{TestIdeals}. 
 However, we will need to consult with the editors about how to deal with citing other packages.  
 \item We investigated what is going on here, and it appears that the way to avoid the error is to first install the most recent version of the \emph{TestIdeals} package from GitHub first, and then install the current version of \emph{FrobeniusThresholds}. 
