--- a/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
+++ b/Fsing/FrobeniusThresholdsPaper/response_to_referee.tex
@@ -1,4 +1,3 @@
-
 \documentclass{amsart}
 \usepackage{calc,amssymb,amsthm,amsmath,amsfonts,setspace,mathtools}
 \RequirePackage[dvipsnames,usenames]{xcolor}
@@ -89,12 +88,12 @@
 \begin{enumerate}
 \item We have added a footnote pointing out the previous name of \emph{FrobeniusThresholds}.  Before submitting the current paper, we contacted each author to decide who should be an official author/contributor for the current paper and for the \emph{FrobeniusThresholds} package.
 Though the package \emph{FrobeniusThresholds} broke off from the \emph{TestIdeals} package, not all authors of the \emph{TestIdeals} package contributed to \emph{FrobeniusThresholds}.
-Unfortunately, the current \emph{Macaulay2} site for \emph{FThresholds} is outdated, and simply has the list of all \emph{TestIdeals} authors; this will be updated soon. 
-In any case, we now thank all \emph{TestIdeals} authors in the Acknowledgments. 
-\item We do think that this paragraph is important, since $F$-thresholds and $F$-pure thresholds are the focus of the package, and they are constructed in this way.  We've added another example of the Hilbert-Kunz multiplicity to better show that this type of construction indeed fits into a broader context. 
-\item Though we don't particularly like it either, this is standard notation, initiated in [BMS08].
+The \emph{Macaulay2} site for \emph{FrobeniusThresholds}, which previously listed all the \emph{TestIdeals} authors, was recently updated, and now has the correct list of authors and contributors for the package. 
+We now thank all \emph{TestIdeals} authors in the Acknowledgments. 
+\item We do think that this paragraph is important, since $F$-thresholds and $F$-pure thresholds are the focus of the package, and they are constructed in this way.  We've added another example of the Hilbert--Kunz multiplicity to better show that this type of construction indeed fits into a broader context. 
+\item Though we don't particularly like it either, this is standard notation, initiated in [MTW05].
 \item We have added a brief explanation about why these limits exist. 
-\item We changed the wording to reflect the fact that it is remarkable that the terms of the sequence can be recovered by its limit 
+\item We changed the wording to reflect the fact that it is remarkable that the terms of the sequence can be recovered by its limit. 
 \item We updated this based on the referee's suggestion. 
 \item We moved this before Subsection 2.1.  We also reorganized 2.1 to highlight options that might be more relevant to the user. 
 \item Since this computation generally sits in the \emph{TestIdeals} package, we thought it better to avoid the  $\epsilon$ notation and technical description of how these functions are used. 
