--- a/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
+++ b/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
@@ -452,6 +452,14 @@ o4 = false
 By comparing test ideals of $f$ at different parameters, we can decide  whether $t$ is the $F$-pure threshold of $f$. 
 Since not only the $F$-pure thresholds, but also the higher $F$-jumping numbers, are determined by containment conditions on test ideals, the functionality is extended to determine whether a given number is an $F$-jumping number.}
 
+\noindent \textcolor{red}{Another possibility:}
+
+\textcolor{blue}{
+   The general method applied calls upon functionality from the \emph{TestIdeals} package.
+   The test ideals $\tau(f^t)$ of $f$ vary discretely with the parameter $t$; the function \texttt{FPureModule} in \emph{TestIdeals} is used  to compute the ``last'' test ideal of $f$ with parameter in the interval $[0,t)$.
+   Comparing this with the test ideal $\tau(f^t)$, computed by the function \texttt{testIdeal}, we can determine whether $t$ is an $F$-jumping number of $f$, or more specifically, the $F$-pure threshold of $f$.
+}
+
 The general method applied calls upon functionality from the \emph{TestIdeals} package.
 The functions \texttt{testIdeal} and \texttt{FPureModule} therein are used to compute the test ideals $\tau(f^t)$ and $\tau(f^{t-\varepsilon})$, for $0<\varepsilon\ll 1$.
 By comparing these test ideals, we can decide whether $t$ is the $F$-pure threshold of $f$.
