--- a/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
+++ b/Fsing/FrobeniusThresholdsPaper/FrobeniusThresholds.tex
@@ -448,11 +448,11 @@ o4 = false
 
 \noindent \textcolor{red}{Alternative to the next two paragraphs:}
 
-\textcolor{blue}{Within the \emph{TestIdeals} package, the functions \texttt{testIdeal} and \texttt{FPureModule} are used to compute the test ideals of $f$ at different parameters.
-By comparing test ideals of $f$ at different parameters, we can decide  whether $t$ is the $F$-pure threshold of $f$. 
-Since not only the $F$-pure thresholds, but also the higher $F$-jumping numbers, are determined by containment conditions on test ideals, the functionality is extended to determine whether a given number is an $F$-jumping number.}
-
-\noindent \textcolor{red}{Another possibility:}
+% \textcolor{blue}{Within the \emph{TestIdeals} package, the functions \texttt{testIdeal} and \texttt{FPureModule} are used to compute the test ideals of $f$ at different parameters.
+% By comparing test ideals of $f$ at different parameters, we can decide  whether $t$ is the $F$-pure threshold of $f$. 
+% Since not only the $F$-pure thresholds, but also the higher $F$-jumping numbers, are determined by containment conditions on test ideals, the functionality is extended to determine whether a given number is an $F$-jumping number.}
+% 
+% \noindent \textcolor{red}{Another possibility:}
 
 \textcolor{blue}{
    The general method applied calls upon functionality from the \emph{TestIdeals} package.
